# air

./: .codespellignore  .editorconfig  .editorconfig-checker.json  .env  .envrc  .gitignore  .missing_examples_baseline.json  .pre-commit-config-check.yaml  .pre-commit-config-format.yaml  .pre-commit-config.yaml  .travis.yml  .vale.ini  404.html  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MAINTAINERS.md  Makefile  README.md  README.rst  SPEC-foreign-keys.md  complexipy.toml  contributors_mcp.py  docs.md  html2tags.py  index.html  index.md  justfile  llms-full.txt  llms.txt  main.py  mdsf.json  mkdocs.yaml  mkdocs.yml  objects.inv  (+22 more)
.cursor/rules/: derived-cursor-rules.mdc
.github/: CODEOWNERS  FUNDING.yaml  FUNDING.yml  actionlint.yaml  codecov.yaml  codecov.yml  dependabot.yaml  dependabot.yml  pull_request_template.md  renovate.json5  zizmor.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yaml  config.yml  doc_request.md  doc_request.yml  feature_request.md  feature_request.yml
.github/issues/: config.yml
.github/workflows/: CI.yaml  auto-rerun-job.yaml  auto-rerun-job.yaml.yml  auto-rerun-jobs.yaml  ci-overview.yaml  ci-overview.yml  ci.yml  latest-changes.yaml  latest-changes.yml  publish-docs.yaml  publish-docs.yml  publish.yml  python-package.yml  release-to-pypi.yaml  release-to-pypi.yml  tests.yml
CHANGELOG/: 0.10.0.md  0.11.0.md  0.12.0.md  0.13.0.md  0.14.2.md  0.15.0.md  0.16.0.md  0.17.0.md  0.18.0.md  0.19.0.md  0.20.0.md  0.21.0.md  0.22.0.md  0.22.1.md  0.23.0.md  0.24.0.md  0.24.1.md  0.24.2.md  0.25.0.md  0.25.1.md  0.25.2.md  0.26.0.md  0.27.0.md  0.27.1.md  0.27.2.md  0.29.0.md  0.3.0.md  0.30.0.md  0.31.0.md  0.32.0.md  0.33.0.md  0.33.1.md  0.34.0.md  0.35.0.md  0.36.0.md  0.37.0.md  0.38.0.md  0.38.1.md  0.39.0.md  0.4.0.md  (+19 more)
about/: alternatives.html  history.html  index.html
about/alternatives/: index.html
about/help_air/: index.html
about/history/: index.html
about/inspirations/: index.html
about/roadmap/: index.html
about/story/: index.html
about/why/: index.html
air/: __init__.py
air-tags/: index.html
airdocs/: justfile  llms.txt
airdocs/pages/: home.py  why.md
api/: applications.html  background.html  forms.html  index.html  index.md  layouts.html  requests.html  responses.html  svg.html  templates.html
api/applications/: index.html  index.md
api/background/: index.html  index.md
api/cli/: index.html
api/dependencies/: index.html  index.md
api/exception_handlers/: index.html  index.md
api/exceptions/: index.html  index.md
api/ext/: index.html  index.md
api/forms/: index.html  index.md
api/generator/: index.html
api/layouts/: index.html  index.md
api/models/: index.html  (+1 more)
benchmarks/: README.md  test_jinja_rendering_benchmark.py  test_memory_tag_cleanup.py
book/: index.html
community/: index.html
concepts/: air_tags.html  escaping_html.html  forms.html  index.html  jinja.html  layouts.html
cookbook/: index.html
deployment/: index.html
docs/: CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  air-tags.md  conf.py  index.md  index.rst  installation.rst  llms.txt  main.py  make.bat  quickstart.md  reference.py  static-sites.md  templates.py  tools.md  usage.rst  why.md
examples/: airblog.py  auth_demo.py  basic_auth_example.py  cache_factory.py  cache_inmemory.py  cache_memcached.py  cache_redis.py  demo_form_errors.py  failing_types_in_tags.py  github_oauth_demo.py  hello_world.py  html_sample.py  instrument.py  jinja_in_air_tags.py  login.py  mvpcss_hxboost.py  mvpcss_layout.py  openapi.py  query_params_example.py  render.py  request_htmx.py  server_sent_events.py  tags_render.py  todo_example.py  todos.csv  tortoiseorm_demo.py  url_helper_sample.py
examples/airblog/: README.md  airblog.py  hello-world.md  markdown-features.md  pyproject.toml  test_airblog.py
examples/airblog/posts/: hello-world.md  markdown-features.md
extra/db/: pyproject.toml
extra/db/src/db/: __init__.py  sql.py
input/: base.html  hello_fasthtml.py  index.html
learn/: index.html
nbs/: explore_griffe.py
pages/: about.md  charts.py  concepts.md  concepts.new  concepts.old  concepts.py  cookbook.md  home.py  learn.md  learn.py  learn_quickstart.py  learn_tutorial_1.py  pulse.py  reference.md  resources.md  roadmap.md  tools.md  why.md  why.py
quickstart/: index.html
roadmap/: index.html
scripts/: copy_src_example_to_callable.py  missing_examples.py
search/: search_index.json
sprint/: index.html
src_examples/: applications__Air__get.py  applications__Air__get__test.py  applications__Air__page.py  applications__Air__page__test.py  applications__Air__post.py  applications__Air__post__test.py  dependencies___is_htmx_request.py  dependencies___is_htmx_request__test.py  exception_handlers__default_404_exception_handler.py  exception_handlers__default_404_exception_handler_test.py  exception_handlers__default_404_router_handler.py  exception_handlers__default_404_router_handler_test.py  exception_handlers__default_500_exception_handler.py  exception_handlers__default_500_exception_handler_test.py  forms__AirForm__example.py  middleware__SessionMiddleware.py
static-sites/: index.html
templates/: page.html
tests/: bench_locals_cleanup.py  components.py  conftest.py  test_air.py  test_applications.py  test_auth.py  test_background.py  test_base_tag.py  test_checks.py  test_cli.py  test_css.py  test_database.py  test_db.py  test_encoders.py  test_exceptions.py  test_field.py  test_form.py  test_form_integration.py  test_forms.py  test_html_utils.py  test_layouts.py  test_main.py  test_middleware.py  test_model.py  test_model_prefix.py  test_new_snapshot.py  test_package.py  test_render_snapshot.py  test_render_with_inline_snapshot.py  test_requests.py  test_requests_future_annotations.py  test_responses.py  test_routing.py  test_shortcuts.py  test_src_examples_forms.py  test_static.py  test_stock_tags_coverage.py  test_svg.py  test_tags.py  test_tags_utils.py  (+5 more)
tools/: index.html  index.md
why/: index.html
(+485 files in other folders)
