# region ----> project <----
[project]
name = "air"
version = "0.45.0"
description = "The new Python web framework by the authors of Two Scoops of Django. Built with FastAPI, Starlette, and Pydantic."
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = { file = "LICENSE" }
authors = [
    { name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com" },
    { name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com" }
]
maintainers = [{ name = "pygarap", email = "pygarap@gmail.com" }]
keywords = [
    "air",
    "air-tags",
    "api",
    "async",
    "backend",
    "css",
    "fastapi",
    "fasthtml",
    "framework",
    "frontend",
    "fullstack",
    "html",
    "javascript",
    "jinja",
    "jinja2",
    "openapi",
    "pydantic",
    "python",
    "rest",
    "restapi",
    "restful",
    "server",
    "templates",
    "uvicorn",
    "web",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: Unix",
    "Programming Language :: JavaScript",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
urls.Changelog = "https://github.com/feldroy/air/blob/main/CHANGELOG.md"
urls.Docs = "https://feldroy.github.io/air/"
urls.Homepage = "https://github.com/feldroy/air"
urls.Issues = "https://github.com/feldroy/air/issues"
urls.Repository = "https://github.com/feldroy/air"
urls.Sponsor = "https://github.com/sponsors/feldroy"
scripts.air = "air.cli:main"
dependencies = [
    "Jinja2>=3.1.6", # https://pypi.org/project/Jinja2
    "fastapi>=0.128.0", # https://pypi.org/project/fastapi
    "frozendict>=2.4.7", # https://pypi.org/project/frozendict
    "itsdangerous>=2.2.0", # https://pypi.org/project/itsdangerous
    "lxml>=6.0.2", # https://pypi.org/project/lxml
    "minify-html>=0.18.1", # https://pypi.org/project/minify-html
    "nh3>=0.3.2", # https://pypi.org/project/nh3
    "pygments>=2.19.2", # https://pypi.org/project/pygments
    "python-multipart>=0.0.22", # https://pypi.org/project/python-multipart
    "rich>=14.3.1", # https://pypi.org/project/rich
    "selectolax>=0.4.6", # https://pypi.org/project/selectolax
    "typer>=0.21.1", # https://pypi.org/project/typer
    "uvicorn>=0.40.0", # https://pypi.org/project/uvicorn
]
# endregion project

# region ----> dependencies <----
# Runtime extras you want users to install from PyPI
[project.optional-dependencies]
# Make `air[standard]` install FastAPI’s “standard” extras so users can run: uv pip install "air[standard]".
standard = [
    # Re-install FastAPI with its “standard” extra.
    "fastapi[standard]>=0.128.0",
]

# Contributor-only groups under [dependency-groups]; install via uv sync --group NAME (not published to PyPI).
[dependency-groups]
# umbrella group that pulls in all dev-time groups
dev = [
    { include-group = "devtools" },
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
]
devtools = []
docs = [
    "click==8.3.1", # https://pypi.org/project/click
    "mkdocs==1.6.1", # https://pypi.org/project/mkdocs
    "mkdocs-autorefs==1.4.3", # https://pypi.org/project/mkdocs-autorefs
    "mkdocs-exclude==1.0.2", # https://pypi.org/project/mkdocs-exclude
    "mkdocs-jupyter==0.25.1", # https://pypi.org/project/mkdocs-jupyter
    "mkdocs-llmstxt==0.5.0", # https://pypi.org/project/mkdocs-llmstxt
    "mkdocs-material[imaging]==9.7.1", # https://pypi.org/project/mkdocs-material
    "mkdocs-redirects==1.2.2", # https://pypi.org/project/mkdocs-redirects
    "mkdocstrings-python==2.0.1", # https://pypi.org/project/mkdocstrings-python
    "mkdocstrings[python]==1.0.2", # https://pypi.org/project/mkdocstrings
]
lint = [
    "beautysh==6.4.2", # https://pypi.org/project/beautysh
    "djlint==1.36.4", # https://pypi.org/project/djlint
    "google-yamlfmt==0.21.0", # https://pypi.org/project/google-yamlfmt
    "prek==0.3.0", # https://pypi.org/project/prek
    "pyrefly==0.50.0", # https://pypi.org/project/pyrefly
    "ruff==0.14.14", # https://pypi.org/project/ruff
    "rumdl==0.1.1", # https://pypi.org/project/rumdl
    "shellcheck-py==0.11.0.1", # https://pypi.org/project/shellcheck-py
    "shfmt-py==3.12.0.2", # https://pypi.org/project/shfmt-py
    "ty==0.0.14", # https://pypi.org/project/ty
    "types-Markdown==3.10.0.20251106", # https://pypi.org/project/types-Markdown
    "types-lxml==2026.1.1", # https://pypi.org/project/types-lxml
    "types-pygments==2.19.0.20251121", # https://pypi.org/project/types-pygments
    "typos==1.42.2", # https://pypi.org/project/typos
    "vale==3.13.0.0", # https://pypi.org/project/vale
]
test = [
    "coverage[toml]==7.13.2", # https://pypi.org/project/coverage
    "diff-cover==10.2.0", # https://pypi.org/project/diff-cover
    "full-match==0.0.3", # https://pypi.org/project/full-match
    "httpx==0.28.1", # https://pypi.org/project/httpx
    "pyinstrument==5.1.2", # https://pypi.org/project/pyinstrument
    "pytest==9.0.2", # https://pypi.org/project/pytest
    "pytest-asyncio==1.3.0", # https://pypi.org/project/pytest-asyncio
    "pytest-benchmark==5.2.3", # https://pypi.org/project/pytest-benchmark
    "pytest-cov==7.0.0", # https://pypi.org/project/pytest-cov
    "pytest-env==1.2.0", # https://pypi.org/project/pytest-env
    "pytest-github-actions-annotate-failures==0.3.0", # https://pypi.org/project/pytest-github-actions-annotate-failures
    "pytest-pretty==1.3.0", # https://pypi.org/project/pytest-pretty
    "pytest-smoke==0.10.0", # https://pypi.org/project/pytest-smoke
]

# endregion dependencies

# region ----> build-system <----
# PEP 517/518: tells pip/uv how to build/install; uv installs your package (editable).
[build-system]
# Ensure the chosen backend is available; a version range keeps CI reproducible while allowing safe updates.
requires = ["uv_build>=0.9.26,<0.10.0"]
# Use uv’s build backend: fast and strict, supports PEP 660 editable installs, and produces correct tooling metadata.
build-backend = "uv_build"
# endregion build-system

# region ----> Coverage.py <----
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
source = ["src", "scripts"]
branch = true
parallel = true
sigterm = true
relative_files = true
data_file = ".coverage" # default “.coverage"
omit = ["tests/*", ".venv/*", "venv/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true
ignore_errors = true
precision = 0
sort = "miss"
exclude_lines = [
    # Pragmas explicitly telling Coverage to skip:
    "pragma: no cover", # skip lines marked not to cover
    "pragma: lax no cover", # skip lines marked lax not to cover
    # TYPE_CHECKING guards:
    '^\s*if\s+TYPE_CHECKING\s*:', # runtime-false typing gate
    '^\s*if\s+typing\.TYPE_CHECKING\s*:', # runtime-false typing gate (qualified)
    # Imports (declarations, not behavior):
    '^\s*import\s+', # bare import lines
    '^\s*from\s+\S+\s+import\s+', # from-import lines
    # Typing/decorators/protocol markers:
    '^\s*from\s+__future__\s+import\s+annotations\s*$', # future annotations import
    "@overload", # typing overload stub
    '@typing\.overload', # typing overload stub (qualified)
    "@abstractmethod", # abstract method decorator
    "@deprecated", # deprecated decorator marker
    '\(Protocol\):$', # Protocol base class line
    # Typing helpers and asserts:
    '^\s*typing\.cast\(', # typing cast helper
    '^\s*reveal_type\(', # static type reveal helper
    '^\s*assert_never\(', # assert_never helper
    'typing\.assert_never', # qualified assert_never
    '^\s*[A-Za-z_][A-Za-z0-9_]*\s*:\s*[^=]+$', # pure annotation (no assignment)
    # Main guards:
    "^if __name__ == '__main__':", # entrypoint guard (single quotes)
    '^if __name__ == "__main__":', # entrypoint guard (double quotes)
    # Intentional stub exceptions:
    '^\s*raise\s+NotImplementedError', # explicit unimplemented stub
    # Common non-runtime noise:
    '^\s*except\s+ImportError\s+as\s+_import_error\s*:', # optional import shim branch
    '^\s*pass$', # no-op pass
    '^\s*assert\s+False\b', # hard stop assertion
    # Ellipsis placeholders:
    '^\s*\.\.\.\s*(#.*)?$', # bare ellipsis
    '^\s*return\s+\.\.\.\s*(#.*)?$', # return ellipsis
    '^\s*[A-Za-z_][A-Za-z0-9_]*\s*:\s*[^=]+=\s*\.\.\.\s*$', # annotated ellipsis assignment
    '^\s*(?:async\s+)?def\s+\w+\s*\(.*\)\s*(?:->[^:]+)?\s*:\s*\.\.\.$', # function body ellipsis
]

[tool.coverage.html]
directory = "htmlcov" # default “htmlcov”

[tool.coverage.xml]
output = "coverage.xml" # default “coverage.xml”

# Helpful for path normalization across OS/CI workers
[tool.coverage.paths]
source = ["src"]
# endregion Coverage.py

# region ----> creosote <----
# https://github.com/fredrikaverpil/creosote
[tool.creosote]
venvs = [".venv"]
paths = ["src"]
deps-file = "pyproject.toml"
sections = ["project.dependencies", "project.optional-dependencies"]
exclude-deps = [
    # TODO -> Enable once we uninstall these dependencies:
    "itsdangerous",
    "python-multipart"
]
# endregion creosote

# region ----> flake8 <----
# https://flake8.pycqa.org/en/latest/glossary.html
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# https://flake8.pycqa.org/en/latest/user/configuration.html
# https://github.com/john-hen/Flake8-pyproject
[tool.flake8]
extend-ignore = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "C901", # McCabe
    # TODO -> Enable once all lint violations are fixed:
    "CCE001", # flake8-class-attributes-order
    "PYD001", # flake8-pydantic
]
per-file-ignores = []
count = false # Print the total number of errors.
show-source = false # Print the source code generating the error/warning in question.
statistics = true # Count the number of occurrences of each error/warning code and print a report.
format = "default"
require-plugins = [
    "Flake8-pyproject",
    "flake8-class-attributes-order",
    "flake8-pydantic",
]
# https://github.com/best-doctor/flake8-class-attributes-order
class_attributes_order = [
    "meta_class",
    "nested_class",
    "constant",
    "outer_field",
    "field",
    "protected_field",
    "private_field",
    "__new__",
    "__init__",
    "__post_init__",
    "__str__",
    "magic_method",
    "save",
    "delete",
    "property_method",
    "protected_property_method",
    "private_property_method",
    "static_method",
    "protected_static_method",
    "private_static_method",
    "class_method",
    "protected_class_method",
    "private_class_method",
    "private_method",
    "protected_method",
    "method",
]

# endregion flake8

# region ----> uv <----
# uv - An extremely fast Python package and project manager, written in Rust.
# https://docs.astral.sh/uv/reference/settings
# uv’s own config block for this project (not PyPI metadata).
[tool.uv]
required-version = ">=0.9.25"
# Only use managed Python installations; never use system Python installations.
python-preference = "only-managed"
# Whether to enable experimental, preview features.
preview = true
# Treat this repo as a package, so uv sync/run installs it editable, enabling CLI scripts, plugins, and package info.
package = true
# Use uv’s default: include the "dev" group for uv run and uv sync unless you pass explicit --group flags.
default-groups = ["dev"]
# Cache “hints” for you (or CI) to hash and decide when to rebuild an editable install or reuse a cached environment.
cache-keys = [
    { file = "pyproject.toml" }, # Rebuild if the project config changes.
    { file = "uv.toml" }, # Rebuild if the uv config changes.
    { file = "uv.lock" }, # Rebuild if exact dependency versions change.
    { dir = "src" }, # Rebuild on library source edits.
    { dir = "tests" }, # Rebuild on test edits (keeps test env fresh).
]

# Settings specific to uv_build.
[tool.uv.build-backend]
# Declare the “src/” layout so imports come from installed package, preventing path leaks and matching user installs.
module-root = "src"
# The single top-level package name under ./src; the backend validates this to catch layout mistakes early.
module-name = "air"

# endregion uv
