[project]
name = "example-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "air",
    "frontmatter",
    "httpx",
    "mistletoe",
    "playwright",
    "pytest",
    "pytest-playwright",
    "rich",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
