[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asaf Taller", email = "tallerasaf@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
